# HertzAndBeats

./: .gitignore  README.md  hertz_build.spec  jogar.bat  pyproject.toml
data/beatmaps/: demo_track.beatmap.json  stage1_pulso_leve.beatmap.json  stage2_batida_franca.beatmap.json  stage3_sobrecarga.beatmap.json  tutorial.beatmap.json
data/config/: hertz_beats.config.json
data/input_bindings/: default_keyboard.json
data/stages/: stages.json
docs/: index.html
hertzbeats/: __init__.py  __main__.py  config.py  game_state.py  lane_scratch_clustering.py  mapper_version.py  modchart.py  music_library.py  palettes.py  player_progress.py  player_stats.py  practice_thinning.py  rogue_lite.py  stages.py  user_settings.py  youtube_import.py
hertzbeats/adapters/: __init__.py  hb_pygame_audio_engine.py  hb_pygame_input_provider.py  hb_pygame_renderer.py  texture_bank.py
hertzbeats/audio/: __init__.py  demo_track_synth.py  sfx_synth.py
hertzbeats/bootstrap/: __init__.py  hertz_game_loop.py  rhythm_composition_root.py
hertzbeats/components/: __init__.py  schemas.py  texture_ids.py
hertzbeats/offline/: __init__.py  beatmap_pipeline.py  percussive_extraction.py
hertzbeats/systems/: __init__.py  boomerang_threat_system.py  camera_shake_system.py  chapter_event_system.py  convergence_ring_system.py  core_damage_system.py  distraction_system.py  graze_system.py  judgment_radius_system.py  judgment_system.py  (+22 more)
musicas/: LEIA-ME.txt
tests/: conftest.py  test_active_modifiers.py  test_announcer.py  test_audio_ducking.py  test_beatmap_mapper.py  test_campaign_carousel.py  test_carousel_filmstrip.py  test_chapter_events.py  test_combo_pitch_shift.py  test_composition_smoke.py  test_config_scaling.py  test_convergence_rings.py  test_core_damage_system.py  test_corruption_glitch.py  test_defender_boomerang.py  test_defender_judgment_radius_collapse.py  test_defender_orbital_capture.py  test_defender_orbital_eclipse.py  test_defender_overload_shockwave.py  test_defender_polarity_resonance.py  test_defender_twin_polarity.py  test_defender_vision_tunnel.py  test_developer_tools.py  test_flow_state.py  test_flow_tier.py  test_focus_beam_and_slash.py  test_ghost_trail.py  test_graze_and_shockwave.py  test_gun_sync_and_ghost_tap.py  test_heartbeat_and_metronome.py  test_hit_error_meter.py  test_hold_notes_and_camera_shake.py  test_hybrid_layers.py  test_hybrid_mode.py  test_ironman.py  test_judgment_system.py  test_karaoke_crossfade_skeleton.py  test_lane_bomb_notes.py  test_lane_choreography.py  test_lane_distractions.py  (+42 more)
tools/: build_docs.py  create_desktop_shortcut.ps1  generate_demo_assets.py  generate_stage_assets.py  make_beatmap.py  make_icon.py
utils/: __init__.py  path_resolver.py
