[project]
name = "hertz-and-beats"
version = "0.1.0"
description = "Bullet Hell Ritmico radial (Defesa de Perimetro) construido sobre a Ouroboros Engine: ameacas nascem na borda e tocam o nucleo exatamente na batida extraida por IA"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pygame-ce>=2.5",
    "ouroboros-engine @ git+https://github.com/EzioMilanoX/OuroborosEngine.git",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
# Pipeline de Importacao Direta (Ctrl+V no Carrossel): opcional, mesmo
# criterio de `librosa` (usada pela IA offline de beatmap, tambem fora
# de `dependencies` -- o jogo funciona sem, so essa feature especifica
# degrada graciosamente com um aviso). `yt-dlp` e chamado como
# subprocess (nunca importado como biblioteca Python), entao instalar
# via `pip` so garante que o executavel `yt-dlp` exista no PATH.
youtube = [
    "yt-dlp>=2024.1.1",
]
# Empacotamento standalone (hertz_build.spec): so' precisa existir na
# maquina que RODA o build, nunca no PC do jogador (o .exe resultante
# ja embute o interpretador inteiro).
build = [
    "pyinstaller>=6.0",
]

[project.scripts]
hertz-beats = "hertzbeats.__main__:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
# "utils*" e' `utils/path_resolver.py` (resolucao de sys._MEIPASS/pasta
# do .exe) -- pacote irmao de `hertzbeats`, nao aninhado dentro dele de
# proposito (usado tambem por `hertz_build.spec`/`tools/`, fora do
# pacote de gameplay). Sem essa entrada, `pip install .`/o console
# script instalado nao encontrariam `utils` fora de uma execucao direta
# do codigo-fonte na raiz do repo.
include = ["hertzbeats*", "utils*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: testes de DSP real sobre audio sintetizado (segundos de librosa)",
]
